# flowy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00990fcb887b_comment_threading_status.py  01731fcd0b00_notification_tables.py  2a561e160fc0_issues_labels_comments_tables.py  4692ab361441_issue_milestones_m2m.py  79b188889e30_external_connections_tables.py  8fd26d6d5557_wiki_weight_column.py  972e94b14d0d_initial_users_table.py  a15a1fa9a7c3_milestones_timers_roles_assignee_logs_.py  df200ec12a76_app_settings_table.py  e001_oauth_states_table.py  e002_milestone_owner.py  e003_issue_type.py  e004_oauth_state_frontend_url.py  e005_wechat_work_bot_tables.py  e006_bot_user_nullable_flowy.py  e007_issue_assignees_wechat_user.py  e008_bot_user_display_name.py  e009_user_nickname.py  f0a1676a17f0_wiki_pages_and_collaborators.py  manual_fix_assignee_pk.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  auth.py  bot_attachments.py  connections.py  dashboard.py  health.py  issues.py  labels.py  milestones.py  notifications.py  router.py  settings_api.py  sync.py  users.py  wechat_work_bot.py  wiki.py
backend/app/core/: crypto.py  dispatcher.py  exceptions.py
backend/app/data/: userdict.txt
backend/app/models/: __init__.py  external.py  issue.py  notification.py  roles.py  settings.py  tracking.py  user.py  wechat_work_bot.py  wiki.py
backend/app/schemas/: auth.py  common.py  external.py  issue.py  wechat_work_bot.py  wiki.py
backend/app/services/: auth.py  connection_service.py  issue_service.py  sync_service.py  wiki_service.py
backend/app/utils/: settings.py  tokenizer.py
backend/tests/: conftest.py  test_api_auth.py  test_api_issues.py  test_api_users.py  test_config.py  test_crypto.py  test_dispatcher.py  test_issue_service.py  test_tokenizer.py  test_utils_settings.py  test_wechat_work_bot.py  test_wiki_search.py
(+66 files in other folders)
