[project]
name = "flowy"
version = "0.1.0"
description = "Lightweight issue tracking platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1,<5",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "alembic>=1.14.0",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
