[project]
name = "flowy"
version = "0.1.0"
description = "Lightweight issue tracking platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.22.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1,<5",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "alembic>=1.14.0",
    "email-validator>=2.2.0",
    "wecom-aibot-sdk-python>=0.1.0",
    "Pillow>=10.0.0",
    "jieba>=0.42.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "B008", "B904", "E402", "E701", "E741", "F401", "SIM105", "B017"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.packages.find]
include = ["app*"]
